# 2048

./: .gitignore  2048.py  CMakeLists.txt  README.md  requirements.txt
2048/: game.py
include/: benchmark.h  colors.h  game.h  gameRunner.h  mcts.h
src/: bc_game.py  benchmark.cpp  benchmarks.py  combine.py  data_merge.py  dqlearning.py  experiment.py  experimentBC.py  game.cpp  gameRunner.cpp  gamestagesbenchmark.py  main.cpp  mcts.cpp  mcts_game.py  random_game.py  stats.py  terminal_game.py  test.py
src/data/: GameStageBechmarkResults1.txt  GameStageBechmarkResults2.txt  GameStageBechmarkResults7.txt  results_1_million.txt  run1.csv  run2.csv  train.csv
src/data/results/: GameStageBechmarkResults10.txt  GameStageBechmarkResults2.txt  GameStageBenchmarkResults6.txt  results_55_million.txt
src/dqn/: dql.py
src/game/: colors.py  game_logic.py  gui_game.py  terminal_game.py
src/game testing/: random_game.py
src/game_tests/: gui_game.py  terminal_game.py
src/players/: bc_eval.py  bc_model.pth  bc_model_weights.pth  bc_network.py  bc_player.py  bc_player_test.ipynb  dqn_player.py  experiment.py  mcts_player.py  random_corner_player.py  random_player.py  validationSet.csv
src/players/weights/: bc_model_weights.pth  bc_model_weights_12.pth  bc_model_weights_15.pth
